[tool.poetry]
name = "pygwalker-ui"
version = "0.1.0"
description = "Simple EDA WebUI"
authors = ["pandego"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygwalker = "^0.4.8.1"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
